@@ -36,6 +36,7 @@
     * 0182 MegaCli: Agent now also supports the 64bit version (Thanks to Philipp Lemke)
     * 1132 qlogic_fcport: New Check for Fibre Channel Ports in QLogic SANbox FC Switches
     * 1133 qlogic_sanbox_fabric_element: New Check for Fabric Elements in QLogic SANbox Fibre Channel Switches
+    * 1134 bintec_sensors.fan: New Check for Fan Speed of Bintec Routers
     * 0994 FIX: agent plugin smart: fixed syntax error
     * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
